# metalnx-msi

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  OPEN_SOURCE_USE.md  README.md  VERSION
docs/: BUILD.md  INSTALL.md
libmetalnx/: metalnx.h
microservices/core/include/: metalnx.h  metalnx_msi_version.h.in
microservices/msiget_illumina_meta/: libmsiget_illumina_meta.cpp
microservices/msiobjget_microservices/: libmsiobjget_microservices.cpp
microservices/msiobjget_version/: libmsiobjget_version.cpp
microservices/msiobjjpeg_extract/: libmsiobjjpeg_extract.cpp
microservices/msiobjput_mdbam/: Makefile  libmsiobjput_mdbam.cpp
microservices/msiobjput_mdmanifest/: libmsiobjput_mdmanifest.cpp
microservices/msiobjput_mdvcf/: libmsiobjput_mdvcf.cpp
microservices/msiobjput_populate/: libmsiobjput_populate.cpp
microservices/msirule_deployment/: libmsirule_deployment.cpp
msiget_illumina_meta/: Makefile  libmsiget_illumina_meta.cpp
msiobjget_microservices/: Makefile  libmsiobjget_microservices.cpp
msiobjget_version/: Makefile  libmsiobjget_version.cpp
msiobjjpeg_extract/: Makefile  libmsiobjjpeg_extract.cpp
msiobjput_mdbam/: Makefile  libmsiobjput_mdbam.cpp
msiobjput_mdmanifest/: Makefile  libmsiobjput_mdmanifest.cpp
msiobjput_mdvcf/: Makefile  libmsiobjput_mdvcf.cpp
msiobjput_populate/: Makefile  libmsiobjput_populate.cpp
packaging/: build.sh  metalnx-msi-plugins.spec.in  metalnx_msi_plugins.list.template
tests/: README.md  __init__.py  env-sample  test_extract_bam.py  test_extract_illumina.py  test_extract_jpeg.py  test_extract_vcf.py  test_get_microservices.py  test_get_version.py  test_manifest.py  test_populate_metadata.py  test_rule_deployment.py
tests/rules/: mlxExtractMetaDataBam.r  mlxExtractMetaDataVcf.r  mlxExtractMetadataBam.r  mlxExtractMetadataIllumina.r  mlxExtractMetadataJpeg.r  mlxExtractMetadataVcf.r  mlxGetMicroservices.r  mlxGetVersion.r  mlxManifest.r  mlxPopulate.r  mlxRuleDeployment.r
tests/samples/: test_rule_deploy.re
vocabulary/: rules.manifest  rules.py  vocabulary.py
vocabulary/Plugglabe_Rule_Engine_POC/: rule_mgmt.py  vocabulary.py
vocabulary/libmsiadd_vocab_metadata/: Makefile  libmsiadd_vocab_metadata.cpp
vocabulary/libmsicreate_vocabulary/: libmsicreate_vocabulary.cpp  reVocabulary.cpp  reVocabulary.hpp
vocabulary/libmsiremove_vocab_metadata/: libmsiremove_vocab_metadata.cpp
vocabulary/libmsiremove_vocabulary/: Makefile  libmsiremove_vocabulary.cpp
vocabulary/libvocabulary/: Makefile  reVocabulary.cpp  reVocabulary.hpp
vocabulary/msiadd_vocab_metadata/: libmsiadd_vocab_metadata.cpp
vocabulary/msicreate_vocabulary/: Makefile  libmsicreate_vocabulary.cpp
vocabulary/msiremove_vocab_metadata/: Makefile  libmsiremove_vocab_metadata.cpp
vocabulary/msiremove_vocabulary/: libmsiremove_vocabulary.cpp
vocabulary/tests/: README.md  __init__.py  test_add_metadata_to_vocab.py  test_add_vocab_metadata.py  test_create_duplicated_vocab.py  test_create_vocab.py  test_remove_vocab.py  test_remove_vocab_metadata.py  test_vocabulary_database.py  vocabulary_rules.re
vocabulary/tests/rules/headers/: mlxAddVocabMetadata.r  mlxCreateVocabulary.r  mlxRemoveVocabMetadata.r  mlxRemoveVocabulary.r
